<resources>
    <string name="facebook_app_id">269847133520473</string>
    <string name="fb_login_protocol_scheme">fb269847133520473</string>
    <string name="app_name">Smart Lens</string>
    <string name="sign_up">Sign Up</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Text Recognition files cannot be downloaded due to low device storage, Free atleast 500 MB</string>
    <string name="ocr_header">Click &quot;Recharge&quot; to recharge</string>
    <string name="read_text">Recharge</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="title">Smart Lens</string>
    <string name="google_login">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">"        Login with Facebook"</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="log_in">Log In</string>
    <string name="profile">Profile</string>
    <string name="scan_document">Scan\nDocument</string>
    <string name="scan_id_card">Scan\nID Card</string>
    <string name="web_form_fill_up">Web Form\nFill Up</string>
    <string name="scratch_card_recharge">Scratch Card\nRecharge</string>
    <string name="use_offline">Use Offline</string>
    <string name="smart_lens">Smart Lens</string>
    <string name="send_to_pc">Send To Pc</string>
    <string name="app_name2">Files Manager</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="new_folder">New Folder</string>
    <string name="label_save">Save</string>
    <string name="new_file">New File</string>
    <string name="encrypt_the_content">Encrypt the content</string>
    <string name="label_content">Content</string>
    <string name="label_name">File Name</string>
    <string name="label_decrypt">Decrypt</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_delete">Delete</string>
    <string name="new_name">New name</string>
    <string name="current_name">Current name</string>
    <string name="rename">Rename</string>
    <string name="drop_here">DROP HERE</string>
    <string name="decline">DECLINE</string>
    <string name="folder_options">Folder options</string>
    <string name="file_options">File options</string>
    <string name="moving_file">Moving: %1$s</string>
    <string name="copy_file">Copying: %1$s</string>
    <string name="switch_to_internal">Switch to internal</string>
    <string name="order_by">Order by ...</string>
    <string name="filter">Filter</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="file_type_sel">Select file type</string>
    <string name="ip_address">Enter PC\'s IP address</string>
    <string name="send">Send</string>
    <string name="smart_lens_client">Smart Lens\nServer</string>
    <string name="save_text">Save Text</string>
    <string name="get_text">Get Text</string>
    <string name="namepopup">"Name:              "</string>
    <string name="emailpopup">"Email:              "</string>
    <string name="phonepopup">"Phone:            "</string>
    <string name="anim_text">Flick the phone towards yourself in camera mode to fix orientation.\nTouch anywhere to continue.</string>
    <string name="no_text_found">No text found</string>
    <string name="my_files">My files</string>
    <string name="process">PROCESS</string>
    <string name="saved_files">Saved Files</string>
    <string name="save_online">Save Online</string>
    <string name="title_activity_id_scan">IdScanActivity</string>
    <string name="save_field">Save Field</string>
    <string name="get_field">Get Field</string>
    <string name="done">DONE</string>
    <string name="name_of_fieldtxt">Name of field:</string>
    <string name="contents">Contents:</string>
    <string name="title_activity_web_form">WebFormActivity</string>
    <string name="text_to_speech">Text To\nSpeech</string>
    <string name="developer_info">Developer Info</string>
    <string name="card_number_length">Card number length</string>
    <string name="delete_account">Delete Account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="link">https://drive.google.com/open?id=0B2TskRdZU2QcM0ViaUdZWWlUblU</string>
    <string name="pc_client_download">PC Client download:</string>
    <string name="touch_icon">Touch to focus\nHold the phone\nsteady</string>
    <string name="select_operator">Select Operator</string>
    <string name="touchicon">TouchIcon</string>
</resources>
