<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.muhtasim.fuadrafid.smartlens.activities.DataBaseActivity"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_files"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="24sp"
        style="@style/ShadowText2"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />
    <ListView
        android:background="@color/white"
        android:id="@+id/fileList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >
    </ListView>
    <LinearLayout
        android:id="@+id/savePanel"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/EtFileName"
        android:hint="@string/enter_file_name"
        android:textSize="20sp"
        android:padding="10dp"
        android:background="@drawable/editext_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        />
    <Button
        android:id="@+id/dataBaseSaveBtn"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        style="@style/ShadowText2"
        android:text="@string/save_online"
        android:background="@drawable/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>