<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/docScan"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/docscan"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_document"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/IdScan"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/id_card"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_id_card"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/FormFill"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/smartphone"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/web_form_fill_up"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ScratchCard"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/creditcard2"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scratch_card_recharge"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/TextToSpeech"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/text2speech"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_to_speech"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

